--- a/info.html
+++ b/info.html
@@ -1,17 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="css\info-style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Want to Learn to Code?</title>
 </head>
 <body>
-    <h1>Learn With Leon's Resources</h1>
-    <a href="https://leonnoel.com/"><h2>leonnoel.com</h2></a>
-    <a href="https://www.twitch.tv/learnwithleon">Twitch</a>
-    <a href="https://discord.com/invite/K7WHGk7">Discord</a>
-    <a href="https://twitter.com/leonnoel">Twitter</a>
-    <a href="http://resilientcoders.org/">Resilient Coders</a>
+    <section class="leon">
+        <h1>Learn With Leon's Resources</h1>
+        <p>Want to Learn With Leon? Here are some resources to get you started on your learning to code journey! Everything is completely free--Leon does not charge for this awesome education. Change your life and check out these links:</p>
+
+        <iframe class="sup" src="https://clips.twitch.tv/embed?clip=DependableSincerePigShazBotstix-MJNbKJE0poV_AJkR&parent=www.example.com" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+
+    </section>
+    <section class="container links">
+        <section class="info">
+        <h2>Website</h2></a>
+        <a href="https://leonnoel.com/">Let's Go!</a>
+        </section>
+        <section class="info"> 
+        <h2>Twitch</h2>
+        <a href="https://www.twitch.tv/learnwithleon">First Try!</a>
+        </section>
+        <section class="info">
+        <h2>Discord</h2>
+        <a href="https://discord.com/invite/K7WHGk7">Automagically!</a>
+        </section>
+        <section class="info">
+        <h2>Twitter</h2>
+        <a href="https://twitter.com/leonnoel">Go Get!</a>
+        </section>
+        <section class="info">
+        <h2>Resilient Coders</h2>
+        <a href="http://resilientcoders.org/">1 Job Plz!</a>
+        </section>
+    </section>
 </body>
 </html>
